Reworks based on feedback